// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResolutionBox render() handles default 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <IconCheckmark
      color="green400"
    />
    <span>
      This issue has been marked as resolved.
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`ResolutionBox render() handles inCommit 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <IconCheckmark
      color="green400"
    />
    <span>
      <span
        key="3"
      >
        <span
          key="0"
        >
          This issue has been marked as resolved by 
        </span>
        <CommitLink
          commitId="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
          repository={
            Object {
              "externalSlug": "example/repo-name",
              "id": "4",
              "name": "example/repo-name",
              "provider": "github",
              "status": "active",
              "url": "https://github.com/example/repo-name",
            }
          }
        />
        <StyledTimeSince
          date="2018-11-30T18:46:31Z"
          suffix="ago"
        />
      </span>
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`ResolutionBox render() handles inNextRelease 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <IconCheckmark
      color="green400"
    />
    <span>
      This issue has been marked as resolved in the upcoming release.
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`ResolutionBox render() handles inNextRelease with actor 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <IconCheckmark
      color="green400"
    />
    <span>
      <span
        key="3"
      >
        <strong
          key="0"
        >
          <UserAvatar
            className="avatar"
            gravatar={false}
            size={20}
            user={
              Object {
                "email": "david@sentry.io",
                "id": "111",
                "name": "David Cramer",
              }
            }
          />
          <span
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            David Cramer
          </span>
        </strong>
        <span
          key="1"
        >
           marked this issue as resolved in the upcoming release.
        </span>
      </span>
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`ResolutionBox render() handles inRelease 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <IconCheckmark
      color="green400"
    />
    <span>
      <span
        key="4"
      >
        <span
          key="0"
        >
          This issue has been marked as resolved in version 
        </span>
        <WithOrganizationMockWrapper
          key="1"
          projectId="1"
          tooltipRawVersion={true}
          version="1.0"
        />
        <span
          key="2"
        >
          .
        </span>
      </span>
    </span>
  </BannerSummary>
</BannerContainer>
`;

exports[`ResolutionBox render() handles inRelease with actor 1`] = `
<BannerContainer
  priority="default"
>
  <BannerSummary>
    <IconCheckmark
      color="green400"
    />
    <span>
      <span
        key="5"
      >
        <strong
          key="0"
        >
          <UserAvatar
            className="avatar"
            gravatar={false}
            size={20}
            user={
              Object {
                "email": "david@sentry.io",
                "id": "111",
                "name": "David Cramer",
              }
            }
          />
          <span
            style={
              Object {
                "marginLeft": 5,
              }
            }
          >
            David Cramer
          </span>
        </strong>
        <span
          key="1"
        >
           marked this issue as resolved in version 
        </span>
        <WithOrganizationMockWrapper
          key="2"
          projectId="1"
          tooltipRawVersion={true}
          version="1.0"
        />
        <span
          key="3"
        >
          .
        </span>
      </span>
    </span>
  </BannerSummary>
</BannerContainer>
`;
